[project]
name = "polymarket-arbitrage-agent"
version = "1.0.0"
description = "Polymarket Arbitrage Agent - Identifies and trades on near-resolved markets"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]

[tool.setuptools]
# Explicitly specify packages to avoid discovery issues
packages = ["agents", "agents.arbitrage_agent", "agents.polymarket", "agents.utils", "agents.connectors", "agents.application"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.html", "*.md"]

[tool.vercel]
buildCommand = "pip install -r requirements.txt"
installCommand = "pip install -r requirements.txt"
